--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 scikit-learn==1.4.2
 pycaret==3.3.2
+uvicorn==0.29.0
+imbalanced-learn==0.12.2
+pathlib==1.0.1
+joblib==1.3.2
+jsonschema==4.22.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+fastapi==0.111.0
+fastapi-cli==0.0.3
+typer==0.12.3
+typing_extensions==4.11.0
